1990-04-18  dickey@software.org

	* src/version.h:
	correction to 'E' command (following symbolic link to file).
	invoke 'rcslast()' to show "RCS,v" (permit-file) version.

	* src/Makefile: updated include-dependency for 'dedscan.c'

1990-04-18  ste_cm@software.org

	* src/Makefile: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

	* src/Makefile: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

1990-04-18  dickey@software.org

	* src/dedscan.c:
	invoke 'rcslast()' to pick up information about permit-file
	(e.g., "RCS,v").

1990-04-17  dickey@software.org

	* src/ded.c: simplified/corrected code for 'edithead()'

1990-04-17  ste_cm@software.org

	* src/ded.c: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

1990-04-17  dickey@software.org

	* src/Makefile:
	suppress .c.a rule to cover up apollo sr10.2 make-bug (ded.c -> ded.a)

1990-03-06  dickey@software.org

	* src/ded.c: lint

1990-03-06  ste_cm@software.org

	* src/ded.c:
	BASELINE Thu Mar 29 07:37:55 1990 -- maintenance release (SYNTHESIS)

1990-03-06  dickey@software.org

	* src/deddoit.c: lint

1990-03-06  ste_cm@software.org

	* src/deddoit.c: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

	* src/deddoit.c: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

	* src/deddoit.c:
	BASELINE Thu Mar 29 07:37:55 1990 -- maintenance release (SYNTHESIS)

1990-03-06  dickey@software.org

	* src/dedline.c: lint

1990-03-06  ste_cm@software.org

	* src/dedline.c: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

	* src/dedline.c: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

	* src/dedline.c:
	BASELINE Thu Mar 29 07:37:55 1990 -- maintenance release (SYNTHESIS)

1990-03-06  dickey@software.org

	* src/ftree.c: lint

1990-03-06  ste_cm@software.org

	* src/ftree.c: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

	* src/ftree.c:
	BASELINE Thu Mar 29 07:37:55 1990 -- maintenance release (SYNTHESIS)

1990-03-06  dickey@software.org

	* src/sortset.c: lint

1990-03-06  ste_cm@software.org
